# autoETL

./: .env  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  start_server.sh
agents/: nl_processor.py  test_generator.py  validation_agent.py
api/: README.md  main.py  models.py  workflow_manager.py
config/: settings.py
core/: database_manager.py  etl_engine.py  metrics_collector.py
sample_data/: 01_create_source_database.sql  02_create_target_database.sql  03_sample_business_rules.md  README.md
web/: index.html
